# RemorseEngine_First_Gen

./: CMakeLists.txt  README.md  Run.bat  TestBuild_RemorseAdventurer.rar
Dependencies/LuaScript/lib/: luawin.lib
Dependencies/SFML/lib/: sfml-audio.lib  sfml-graphics.lib  sfml-main.lib  sfml-network.lib  sfml-system.lib  sfml-window.lib
Editor/: CMakeLists.txt
Editor/src/: CMakeLists.txt  main.cpp  main_game.cpp
Editor/src/MyFrameWork/: RemorseWindowFrameWork.h  h_Canvas.hpp  h_ConsoleWindow.hpp  h_ControllBase.hpp  h_ControllManager.hpp  h_GameFramework.hpp  h_MemoryManager.hpp  h_MemoryPool.hpp  h_MenuBarControll.hpp  h_ObjectWindowCanvas.hpp  h_ObjectWindowView.hpp  h_RenderBox.hpp  h_SceneViewWindow.hpp  h_WindowControll.hpp  s_Canvas.cpp  s_ConsoleWindow.cpp  s_ControllBase.cpp  s_ControllManager.cpp  s_GameFramework.cpp  s_MemoryManager.cpp  s_MemoryPool.cpp  s_MenuBarControll.cpp  s_ObjectWindowCanvas.cpp  s_ObjectWindowView.cpp  s_SceneViewWindow.cpp  s_WindowControll.cpp
Src/: main.cpp
Src/OurGameLogic/: h_GameLogic.hpp  s_GameLogic (2).cpp  s_GameLogic.cpp
Src/RemorseGameFramework/: RemorseGameFramework.h  h_GameFramework.hpp  h_GameManager.hpp  h_MemoryCollection.hpp  h_MemoryPool.hpp  s_GameFramework.cpp  s_GameManager.cpp  s_MemoryPool.cpp
Src/RemorseScripting/: h_ScriptManager.hpp  s_ScriptManager.cpp
Src/RemorseScripting/RemorseScriptingAS/: h_ScriptManager.hpp  s_ScriptManager.cpp
Src/RemorseScripting/RemorseScriptingAS/Example/: RemorseBehaviour.as
Src/RemorseScripting/RemorseScriptingDart/Example/: Lulu.dart
Src/RemorseScripting/RemorseScriptingDart/Example/RemorseEngine/: DartBehaviour.dart
Src/RemorseScripting/RemorseScrptingNetCore/Example/: Lulu.cs
Src/RemorseScripting/RemorseScrptingNetCore/Example/RemorseEngine/: DotNetBehaviour.cs  Math.cs
Tools/SimpleScriptObfuscate/lz4/lib/: MyScript.asc  MyScript_Decoded.as  RemorseAdventure.remorse  RemorseAdventurer.json  TestUsage.txt  lz4.exp  lz4.lib
